fix overflow, add contact menu

--- a/src/input.css
+++ b/src/input.css
@@ -19,6 +19,20 @@ body {
   background-color: rgb(137, 99, 171);
 }
 
-#profile {
+#profile,
+#portfolio,
+#linkakun {
   background-color: rgb(147, 51, 234);
+
+  scrollbar-width: none;
+}
+
+#project-title {
+  font-weight: bold;
+
+  font-family: sans-serif, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+
+#contact-title {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
